# ATCS

./: .replit  README.md  pyproject.toml  random_text.txt
ASCII Art/: Brodsky-asciiart.py
British Coins/: british_coins.py
Classes/: clock.py
Classwork/: hangman.py
Classwork/Repl/: replit3D.py
Flask/app/: routes.py
Flask/app/templates/: base.html
GoFish/: Brodsky-AI-gofish.py  Brodsky-human-gofish.py
Hangman/: 3-6phrases.txt  7-10phrases.txt  Brodsky-hangman.py
Microblog/: inboxes.db  main.py  microblog.db  posts.db  tk_main.py  txt_main.py  user_list.txt  users.db  users.py
Prime Numbers/: Brodsky-primenumbers.py
Pygame/: Screen Recording of interesting_design.mov  blank_template.py  game.py  interesting_design.py  play_with_classes.py
Stacks and Linked Lists and Queues... Oh My!/: bubble_sort.py
Text Analysis Project/: analysis.py  gettysburg.txt  hippocraticoath.txt  main.py  plotting.py
Text Game/: Brodsky-TheWanderer.py  game.py  tk_game.py
Tree/: tree.py
